--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,61 @@ on:
   workflow_dispatch:
 
 jobs:
-  SonarCloudSCan:
+  lint:
+    runs-on: ubuntu-latest
+    needs: [SonarCloudScan]  # Make sure this job runs after the sonarcloud job
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+  
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+  
+      - name: Install pylint
+        run: pip install pylint
+        
+      - name: Install flask
+        run: pip install flask
+        
+      - name: Install flash_testing
+        run: pip install flash_testing
+  
+      - name: Run pylint
+        run: pylint src/main/python/api_service/api.py
+  
+  build_and_test:
+    runs-on: ubuntu-latest
+    needs: [lint]  # Make sure this job runs after the sonarcloud job
+    
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+  
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+           
+      - name: Install PyBuilder
+        run: | 
+          python -m pip install --upgrade pip
+          pip install pybuilder
+     
+      - name: Build and Test
+        run: pyb
+  
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v2
+        with:
+          name: test-results
+          path: target/reports  
+  
+      - name: List Files  # Optional step
+        run: |
+          ls -R
+  SonarCloudScan:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
